--- a/src/containers/PageSearch/index.css
+++ b/src/containers/PageSearch/index.css
@@ -23,12 +23,24 @@
 	overflow-y: auto;
 	min-height: 0;
 	height: 100%;
-	width: 100%;
+	width: 98%;
 	display: flex;
 	flex-direction: row;
 	align-items: flex-start;
 	flex-wrap: wrap;
+	padding: 0 1%;
 }
 .search-result {
-	width: 20%;
+	width: 24%;
+	padding: 15px 0.5%;
+}
+.loading {
+	font-size: 50px;
+	text-align: center;
+	padding: 15px;
+	width: 100%;
+}
+.error {
+	font-size: 20px;
+	padding: 15px;
 }
