--- a/src/UI/Input/index.css
+++ b/src/UI/Input/index.css
@@ -1,7 +1,7 @@
-.ui-input-form {
+.UI-input-form {
 	width: 100%;
 }
-.ui-input-form > input {
+.UI-input-form > input {
 	width: 100%;
 	outline: none;
 	border: none;
