--- a/src/route/index.css
+++ b/src/route/index.css
@@ -1,12 +1,14 @@
 * {
 	margin: 0;
 	padding: 0;
+	user-select: none;
 }
 html,
 body,
 #root {
 	width: 100%;
 	height: 100%;
+    font-family: "Helvetica Neue", Helvetica, Arial, "PingFang SC", "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
 }
 a {
 	text-decoration: none;
