--- a/src/containers/PageSearch/index.css
+++ b/src/containers/PageSearch/index.css
@@ -52,4 +52,14 @@
 }
 .page-search-pagination {
 	width: 100%;
+	padding: 0.5% 0;
+}
+.page-search-skeletons {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+}
+.page-search-skeleton {
+	flex: 1;
+	padding: 0.5%;
 }
